Se ha comenzado la creación de la BBDD y el acceso a la galería

--- a/app/src/main/res/layout/activity_anhadir_juego.xml
+++ b/app/src/main/res/layout/activity_anhadir_juego.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/btAnhadir"
+            android:id="@+id/btAnhadirMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -69,7 +69,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/txvDesarrolladora"
@@ -230,15 +231,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/tienda"
-            />
+            android:text="@string/tienda" />
 
         <Spinner
             android:id="@+id/drpbtTienda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:entries="@array/Tienda"/>
+            android:entries="@array/Tienda" />
     </LinearLayout>
 
     <LinearLayout
@@ -247,6 +247,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
 
         <Switch
