--- a/app/src/main/res/layout/activity_anhadir_juego.xml
+++ b/app/src/main/res/layout/activity_anhadir_juego.xml
@@ -41,10 +41,10 @@
         <ImageView
             android:id="@+id/imgFotovideojuego"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_marginBottom="30dp"
             android:layout_weight="1"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@android:drawable/ic_input_add" />
 
         <LinearLayout
             android:layout_width="match_parent"
