--- a/app/src/main/res/layout/activity_anhadir_juego.xml
+++ b/app/src/main/res/layout/activity_anhadir_juego.xml
@@ -77,7 +77,7 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/desarrolladxora"
+                    android:text="@string/desarrolladora"
                     android:textSize="12sp" />
 
                 <Spinner
