--- a/app/src/main/res/layout/activity_relacionados.xml
+++ b/app/src/main/res/layout/activity_relacionados.xml
@@ -20,8 +20,22 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@android:color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/volverRel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/volver" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
