--- a/app/src/main/res/menu/menu_contextual_favorito.xml
+++ b/app/src/main/res/menu/menu_contextual_favorito.xml
@@ -4,4 +4,7 @@
     <item
         android:id="@+id/itemFavorito"
         android:title="@string/favorito" />
+    <item
+        android:id="@+id/itemBorrar"
+        android:title="Borrar" />
 </menu>
