--- a/app/src/main/res/menu/action_anhadir_videojuego.xml
+++ b/app/src/main/res/menu/action_anhadir_videojuego.xml
@@ -2,6 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/itemDetalles"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="Detalles"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/actionNuevoVideojuego"
         android:icon="@android:drawable/ic_menu_add"
         android:title="Nuevo Videojuego"
