Se ha terminado de añadir las opiniones.

--- a/app/src/main/res/layout/activity_detalles_juego.xml
+++ b/app/src/main/res/layout/activity_detalles_juego.xml
@@ -148,8 +148,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/btVerOpiniones"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Ver Opiniones" />
 
         <Button
             android:id="@+id/btAnhadirOpinion"
