Se ha comenzado el menú de preferencias pero no funciona. Se muestra la ubicación actual en el mapa.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#23A7D8</color>
     <color name="colorPrimaryDark">#23A7D8</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#D4AF37</color>
 
     <color name ="white">#FFFFFF</color>
     <color name ="transparent">#00000000</color>
