Se han creado los paquetes.

--- a/app/src/main/res/layout/activity_detalles_juego.xml
+++ b/app/src/main/res/layout/activity_detalles_juego.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetallesJuego">
+    tools:context="com.daisa.trabajo1.activitiesPrinc.DetallesJuego">
 
     <LinearLayout
         android:id="@+id/linearLayout9"
