--- a/app/src/main/res/layout/activity_anhadir_opinion.xml
+++ b/app/src/main/res/layout/activity_anhadir_opinion.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AnhadirOpinion">
+    tools:context="com.daisa.trabajo1.activitiesPrinc.AnhadirOpinion">
 
     <LinearLayout
         android:layout_width="match_parent"
