--- a/app/src/main/res/layout/activity_lista_opiniones.xml
+++ b/app/src/main/res/layout/activity_lista_opiniones.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListaOpiniones">
+    tools:context="com.daisa.trabajo1.activitiesPrinc.ListaOpiniones">
 
     <ListView
         android:id="@+id/lvOpiniones"
