--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    tools:context=".MainActivity">
+    tools:context="com.daisa.trabajo1.activitiesPrinc.MainActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
