--- a/app/src/main/res/layout/activity_preferencias.xml
+++ b/app/src/main/res/layout/activity_preferencias.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Preferencias"
+    tools:context="com.daisa.trabajo1.preferencia.Preferencias"
     android:padding="24dp"
     android:orientation="vertical"
     android:background="?attr/backgroundcolor">
