--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistrarUsuario">
+    tools:context="com.daisa.trabajo1.usuario.RegistrarUsuario">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
