--- a/app/src/main/res/layout/activity_relacionados.xml
+++ b/app/src/main/res/layout/activity_relacionados.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Relacionados">
+    tools:context="com.daisa.trabajo1.tab.Relacionados">
 
     <LinearLayout
         android:layout_width="match_parent"
