--- a/app/src/main/res/layout/fragment_plataforma.xml
+++ b/app/src/main/res/layout/fragment_plataforma.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlataformaFragment">
+    tools:context="com.daisa.trabajo1.tab.PlataformaFragment">
 
     <ListView
         android:id="@+id/lvPlataforma"
