Ya hay tema oscuro!

--- a/app/src/main/res/menu/menu_contextual_favorito.xml
+++ b/app/src/main/res/menu/menu_contextual_favorito.xml
@@ -6,5 +6,5 @@
         android:title="@string/favorito" />
     <item
         android:id="@+id/itemBorrar"
-        android:title="Borrar" />
+        android:title="@string/borrar" />
 </menu>
