--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
 
 
     <!-- Night / dark  Mode theme. -->
-    <style name="darktheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="darktheme" parent="Theme.AppCompat">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">#212121</item>
     <item name="colorPrimaryDark">#000000</item>
