--- a/app/src/main/res/xml/preferencias.xml
+++ b/app/src/main/res/xml/preferencias.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="Categoría 1">
+    <PreferenceCategory android:title="General">
+        <CheckBoxPreference
+            android:key="@string/usarPreferencias"
+            android:title="Usar Preferencias"
+            android:summary="Indica si quieres usar las preferencias personalizadas" />
+
+        <EditTextPreference
+            android:key="@string/nomUsuPublico"
+            android:title="Nombre de Usuario público"
+            android:summary="Elige qué nombre quieres que se vea en tus comentarios."
+            android:dialogTitle="Introduce un nombre:" />
+    </PreferenceCategory>
+    <PreferenceCategory android:title="Tema de la aplicación">
 
         <CheckBoxPreference
-            android:key="opcion 1"
-            android:summary="Ver sólo a los contactos favoritos"
-            android:title="Preferencia 1" />
+            android:key="@string/darkMode"
+            android:title="Modo Oscuro"
+            android:summary="La aplicación pasará a modo oscuro"/>
 
-        <EditTextPreference
-            android:key="opcion 2"
-            android:title="Preferencia 2"
-            android:summary="Cómo quieres que tus contactos te vean"
-            android:dialogTitle="Introduce un valor" />
+
     </PreferenceCategory>
-    <PreferenceCategory android:title="Categoría 2">
-        <EditTextPreference
-            android:key="opcion 3"
-            android:title="Preferencia 3"
-            android:summary="Cómo quieres que tus contactos te vean 3333"
-            android:dialogTitle="Introduce un valor" />
-    </PreferenceCategory>
+
+
 </PreferenceScreen>
